progress on code

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -59,7 +59,7 @@ form input[type=text] {
     padding: 5px;
 }
 
-.chat {
+.messagearea {
     padding: 5px;
     margin-bottom: 5px;
     background-color: #eee;
