--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -59,7 +59,7 @@ form input[type=text] {
     padding: 5px;
 }
 
-.messagearea {
+.chat {
     padding: 5px;
     margin-bottom: 5px;
     background-color: #eee;
@@ -83,7 +83,7 @@ form input[type=text] {
     padding: 10px;
 }
 
-.friend {
+.friends {
     color: #fff;
     background-color: #0090da;
 }
